<resources>
    <string name="app_name">Trades</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="value">Value</string>
    <string name="fee">Fee</string>
    <string name="add_new_trade">add new trade</string>
    <string name="_0">+0%</string>
    <string name="_1800">1800</string>
    <string name="_0_4">0.2</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="inr">USDT</string>
    <string name="trade_prices">trade prices</string>
    <string name="trade">Trade</string>
    <string name="bought_at">Bought at</string>
    <string name="on">on</string>
    <string name="sold_at">Sold at</string>
    <string name="sold_at_price">sold at price</string>
    <string name="yesterday">Yesterday</string>
    <string name="delete">Delete</string>
</resources>