<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".newtrade.NewTradeActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Trades.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.Trades.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/value"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/fiat"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/inr"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/name"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fiat"
            android:importantForAutofill="no" />

        <EditText
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/fee"
            android:id="@+id/fee"
            android:text="@string/_0_4"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:importantForAutofill="no" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tableLayout"
            tools:listitem="@layout/item_profit_percentage"
            android:layout_marginTop="24dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/fee"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>