<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingTop="8dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        android:id="@+id/value"
        android:foregroundGravity="center"
        android:textSize="24sp"
        android:layout_weight="1"
        android:text="@string/_1800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_margin="8dp"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bitcoin"
        android:textColor="@color/purple_1000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginEnd="24dp"
        android:id="@+id/increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:layout_margin="16dp"
        android:textColor="@color/green"
        android:id="@+id/buy_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:text="@string/_1800"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        app:layout_constraintStart_toEndOf="@id/buy_price"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:contentDescription="@string/trade_prices" />

    <TextView
        android:textColor="@color/red"
        android:layout_margin="16dp"
        android:id="@+id/sell_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:text="@string/_1800"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/arrow"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:text="@string/_1800"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buy_price" />

    <ImageView
        android:id="@+id/arrowNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/trade_prices"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/net"
        app:layout_constraintTop_toBottomOf="@id/arrow" />

    <TextView
        android:id="@+id/netAfter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:text="@string/_1800"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/arrowNet"
        app:layout_constraintTop_toBottomOf="@id/buy_price" />

    <View
        android:alpha="0.5"
        android:layout_marginBottom="1dp"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>